create all pages

--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,9 @@ deploy:
 
 # Header
 menu:
-  About: /about
+  Home: /
   Features: /features
   Releases: /releases
+  FAQ: /faq
   Github: https://github.com
   Twitter: https://twitter.com/giflens
