added content and demo gifs

--- a/_config.yml
+++ b/_config.yml
@@ -86,5 +86,5 @@ menu:
   Features: /features
   Releases: /releases
   FAQ: /faq
-  Github: https://github.com
+  Github: https://github.com/giflens/giflens
   Twitter: https://twitter.com/giflens
