removed github and twitter links from menu, and added About page

--- a/_config.yml
+++ b/_config.yml
@@ -88,5 +88,4 @@ menu:
   Features: /features
   Releases: /releases
   FAQ: /faq
-  Github: https://github.com/giflens/giflens
-  Twitter: https://twitter.com/giflens
+  About: /about
